# turing-machine-sdl

./: .#CMakeLists.txt  .#rendered_text.hpp  .#turing_machine.cpp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  display.cpp  display.hpp  main.cpp  rendered-glyph.cpp  rendered-glyph.hpp  rendered_glyph.cpp  rendered_glyph.hpp  rendered_text.hpp  sdl-turing-machine  state.hpp  texture.cpp  texture.hpp  texture_builder.cpp  texture_builder.hpp  tile.hpp  tile_renderer.cpp  tile_renderer.hpp  turing_machine.cpp  turing_machine.hpp
.cache/clangd/index/: build_turing_machine_ui_definition.cpp.372E8869A7C3A428.idx  cfg.hpp.B4FDF29E2DA5BB44.idx  cfg.hpp.EEAFDFFDCF043314.idx  char_set.cpp.463E075D01C991AA.idx  char_set.hpp.3FD8061F1BD229BB.idx  colour.cpp.FEB025F54249E9A7.idx  colour.hpp.3E22F98E83F90608.idx  colour.hpp.73CADE85D8923043.idx  display.cpp.04E780B1635CFFEB.idx  display.cpp.F4388F879C1FDF76.idx  display.hpp.4B36DE6967FB221F.idx  display.hpp.9B1DB7764478E73A.idx  display.hpp.C5D1C33D65CE6563.idx  main.cpp.199F2E47874E4497.idx  rendered-glyph.cpp.F369B6824DECDB4C.idx  rendered-glyph.hpp.8F1BF420C1764E80.idx  rendered_glyph.cpp.DD90544310B9D2F8.idx  rendered_glyph.hpp.ED7180BB612EE839.idx  state.hpp.41F6F19F7954B358.idx  state.hpp.EDDB2069F3EF6AF4.idx  texture.cpp.7C7DB48128564561.idx  texture.hpp.D364423943A48835.idx  texture_builder.cpp.AE73F43F4B7C290A.idx  ui.cpp.8D917945873C492A.idx  (+22 more)
headers/controllers/: turing_machine.hpp  ui_input.hpp
headers/models/: ui_state.hpp
headers/util/: colour.hpp
headers/views/: display.hpp  texture_builder.hpp  turing_ui_def.hpp  ui.hpp
inc/: Makefile
inc/controllers/: turing_machine.hpp  ui_input.hpp
inc/models/: ui_state.hpp
inc/views/: display.hpp  texture_builder.hpp
include/display/: display.hpp  texture_builder.hpp
include/process/: turing_machine_fsm.hpp
src/: Makefile  build_turing_machine_ui_definition.cpp  cfg.hpp  colour.cpp  display.cpp  display.hpp  main.cpp  state.hpp  table.hpp  texture_builder.cpp  texture_builder.hpp  turing_machine.cpp  turing_machine.hpp  turing_machine_fsm.cpp  turing_machine_fsm.hpp  turing_ui_def.hpp  ui.cpp  ui.hpp  ui_input.cpp  ui_input.hpp  ui_state.hpp
src/controllers/: turing_machine.cpp  ui_input.cpp
src/display/: colour.cpp  display.cpp  texture_builder.cpp  ui.cpp
src/models/: turing_machine_fsm.cpp
src/process/: turing_machine.cpp  turing_machine_fsm.cpp
src/util/: colour.cpp
src/views/: display.cpp  texture_builder.cpp
(+6 files in other folders)
